--- a/src/style.css
+++ b/src/style.css
@@ -19,19 +19,17 @@ h1{
     padding: 2rem;
 }
 
-.btn{
+button{
     display: inline-block;
     padding: 0 20px;
     outline: none;
     height: 2rem;
-    /* margin-top: 1rem; */
-    /* text-align: center; */
-    /* justify-items: center; */
-    /* align-items: center; */
+    margin-bottom: 2rem;
+    min-width: 200px;
 }
 
 input{
-    width:95% ;
+    width:98% ;
     height: 2rem;
     display:block;
     margin-bottom: 1rem;
